--- a/css/pricing.css
+++ b/css/pricing.css
@@ -269,7 +269,7 @@ a:hover {
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url('/images/bg-pricing.jpg');
+    background-image: url('./images/bg-pricing.jpg');
 
 }
 
@@ -931,7 +931,7 @@ body {
 
 .videoc-enter {
 
-    background-image: url('/images/bg-videocenter.jpg');
+    background-image: url('./images/bg-videocenter.jpg');
 }
 
 
@@ -1076,7 +1076,7 @@ body {
 }
 
 .social-icons a.facebook {
-    background-image: url('/images/facebooksvg.png');
+    background-image: url('./images/facebooksvg.png');
     background-size: cover;
     justify-content: center;
     align-items: center;
@@ -1084,7 +1084,7 @@ body {
 }
 
 .social-icons a.twitter {
-    background-image: url('/images/twittericon.png');
+    background-image: url('./images/twittericon.png');
     background-size: cover;
     justify-content: center;
     align-items: center;
@@ -1092,7 +1092,7 @@ body {
 }
 
 .social-icons a.dribbble {
-    background-image: url('/images/dribbbblesvg.png');
+    background-image: url('./images/dribbbblesvg.png');
     background-size: cover;
     justify-content: center;
     align-items: center;
@@ -1100,7 +1100,7 @@ body {
 }
 
 .social-icons a.linkedin {
-    background-image: url('/images/linkedinsvg.png');
+    background-image: url('./images/linkedinsvg.png');
     background-size: cover;
     justify-content: center;
     align-items: center;
